stabilization fixes for missing avatars and for null gpx files, aligned with dev f09e7e1

--- a/catalog/static/css/styles.css
+++ b/catalog/static/css/styles.css
@@ -1307,7 +1307,7 @@ div#debug {
     font-size: 13px;
     width: 95%;
     position: absolute;
-    top: 1000px;
+    top: 1550px;
 }
 
 div.deb_header {
